# house-prices

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
data/: .gitignore  X_test.csv.dvc  model.joblib  model.joblib.dvc  predictions.csv  predictions.csv.dvc  target.csv  target.csv.dvc  test.csv  test.csv.dvc
