[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = "Predicting the price of a house based on its characteristics"
authors = ["nevolinaa <https://github.com/nevolinaa>"]
readme = "README.md"
repository = "https://github.com/nevolinaa/house-prices"
keywords = ["python", "linear_regression", "house_prices"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
dvc = "^3.34.0"
omegaconf = "^2.3.0"
mlflow = "^2.9.2"
dvc-gdrive = "^3.0.0"
torch = "^2.1.2"
torch-utils = "^0.1.2"
tensorboard = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
